--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
  <div class="landing-page">
     <h1>Weather Api</h1>
-    <button id="fetch-btn">Fetch Data</button>
+    <button id="fetch-btn" onclick="document.location='http://127.0.0.1:5500/landing.html' ">Fetch Data</button>
  </div>
 
 
