--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
- <div class="landing-page">
-    <h1>Weather Api</h1>
-    <button id="fetch-btn" onclick="document.location='http://127.0.0.1:5500/landing.html' ">Fetch Data</button>
- </div>
-
-
+    <div class="weather-data" id="weather">
+        <div class="landing-page">
+            <h1>Weather Api</h1>
+            <button id="fetch-btn">Fetch Data</button>
+         </div>
+    </div>
     <Script src="./script.js"></Script>
 </body>
 </html>
